-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1
-
None
-
332de746f32e
Compilation of latest webkit stable fails for MinGW-builds 32 bit 4.8.0 posix dwarf:
g++ -shared -Wl,--out-implib,D:\dev\qt\qt-stable\mingw-builds-32-4.8.0-posix-dwarf\qtbase\lib\libQt5WebKitd.a -o D:\dev\qt\qt-stable\mingw-builds-32-4.8.0-posix-dwarf\qtbase\lib\Qt5WebKitd.dll .obj/debug_shared/qrc_WebCore.o .obj/debug_shared/qrc_WebKit.o .obj/debug_shared/qrc_InspectorBackendCommands.o -LD:\dev\icu\51-2\mingw-builds-32-4.8.0-posix-dwarf\lib -LD:\dev\icu\51-2\mingw-builds-32-4.8.0-posix-dwarf\lib -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Networkd -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Guid -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Cored -llibEGLd -llibGLESv2d -lgdi32 -luser32 .obj\debug_shared\Qt5WebKitd_resource_res.o -Wl,-whole-archive -lWebKit1d -Wl,-no-whole-archive -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/WebKit/debug -Wl,-whole-archive -lWebKit2d -Wl,-no-whole-archive -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/WebKit2/debug -Wl,-whole-archive -lWebCored -Wl,-no-whole-archive -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/WebCore/debug -lz -ladvapi32 -lgdi32 -lshell32 -lshlwapi -luser32 -lversion -llibEGLd -llibGLESv2d -lgdi32 -luser32 -lgdi32 -lole32 -luser32 -Wl,-whole-archive -lANGLEd -Wl,-no-whole-archive -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/ThirdParty/ANGLE/debug -Wl,-whole-archive -lJavaScriptCored -Wl,-no-whole-archive -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/JavaScriptCore/debug -lwinmm -Wl,-whole-archive -lWTFd -Wl,-no-whole-archive -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/WTF/debug -licuin -licuuc -licudt -lwinmm -lgdi32 -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Quickd -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Multimediad -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Qmld -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Sqld -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Guid -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Networkd -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Sensorsd -LD:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtbase/lib -lQt5Cored Warning: resolving _cti_vm_throw by linking to @cti_vm_throw@4 Use --enable-stdcall-fixup to disable these warnings Use --disable-stdcall-fixup to disable these fixups D:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(SymbolTable.o):SymbolTable.cpp:(.text+0x2b9): undefined reference to `JSC::JSCell::inherits(JSC::ClassInfo const*) const' D:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(FunctionExecutableDump.o):FunctionExecutableDump.cpp:(.text+0x81): undefined reference to `JSC::JSCell::inherits(JSC::ClassInfo const*) const' D:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(CopyVisitor.o):CopyVisitor.cpp:(.text+0xe3): undefined reference to `JSC::JSCell::structure() const' D:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(PreciseJumpTargets.o):PreciseJumpTargets.cpp:(.text+0x69): undefined reference to `JSC::JSCell::inherits(JSC::ClassInfo const*) const' D:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(ArrayProfile.o):ArrayProfile.cpp:(.text+0x2b8): undefined reference to `JSC::JSCell::structure() const' D:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(ArrayProfile.o):ArrayProfile.cpp:(.text+0x422): undefined reference to `JSC::JSCell::structure() const' c:/mingw-builds/x32-4.8.0-release-posix-dwarf-rev2/bin/../lib/gcc/i686-w64-mingw32/4.8.0/../../../../i686-w64-mingw32/bin/ld.exe: D:/dev/qt/qt-stable/mingw-builds-32-4.8.0-posix-dwarf/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(ArrayProfile.o): bad reloc address 0x20 in section `.eh_frame' collect2.exe: error: ld returned 1 exit status
- is required for
-
QTBUG-33305 Issues to be fixed before Qt5.2 Beta1 release
-
- Closed
-
| For Gerrit Dashboard: QTBUG-34083 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 68313,2 | Fix undefined reference linker errors with MinGW | stable | qt/qtwebkit | Status: MERGED | +2 | 0 |